--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <nav class="navbar navbar-expand-lg bg-body-tertiary px-2">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="./assets/logo.svg" alt="" />
+            <img src="./assets/logo.svg" alt=""/>
           </a>
           <button
-            class="navbar-toggler"
+            class="navbar-toggler toggle-btn"
             type="button"
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
@@ -33,7 +33,21 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <span class="navbar-toggler-icon"></span>
+            <span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="35"
+                height="35"
+                fill="currentColor"
+                class="bi bi-list"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
+                />
+              </svg>
+            </span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 fw-semibold">
@@ -149,9 +163,9 @@
 
       <div class="jumbatron d-flex align-items-start">
         <div
-          class="container d-flex align-items-center justify-content-center flex-sm-wrap flex-lg-nowrap wrap"
+          class="container d-flex align-items-center justify-content-center flex-wrap flex-lg-nowrap"
         >
-          <div class="card border border-0 bg-transparent col">
+          <div class="card bg-transparent border-0">
             <div class="card-body d-flex flex-column gap-3">
               <h5 class="card-title text-white fs-1 fw-bold m-0">
                 Welcome Web Students!
@@ -162,7 +176,7 @@
                 for the modern students and entrepreneur.
               </p>
 
-              <div class="d-grid gap-2 d-md-block d-sm-block">
+              <div class="gap-2 d-md-block d-sm-block">
                 <button
                   type="button"
                   class="btn btn-primary browse-courses-btn text-white fw-semibold p-3"
@@ -179,8 +193,8 @@
             </div>
           </div>
 
-          <div class="d-flex col">
-            <img src="./assets/hero-img.png" alt=""/>
+          <div class="card bg-transparent border-0">
+            <img src="./assets/hero-img.png" alt="" />
           </div>
         </div>
       </div>
