--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
           <div class="carousel-inner pt-2">
             <!-- CAROUSEL ITEMS -->
             <div class="carousel-item active">
-              <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-evenly">
+              <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4 justify-content-evenly">
                 <div
                   class="card single-card shadow mb-5 bg-body-tertiary rounded border border-0 p-0"
                   style="width: 18rem"
